--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+.carousel-container {
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+.image-container {
+  position: relative;
+  height: 400px;
+}
+
+
+.carousel-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
