--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* CAROUSEL */
 .carousel-container {
   max-width: 1600px;
   margin: 0 auto;
@@ -21,3 +22,8 @@
   height: 100%;
   object-fit: cover;
 }
+
+
+
+
+
